[gd_scene load_steps=4 format=2]

[ext_resource path="res://objects/BlockHandler.gd" type="Script" id=1]
[ext_resource path="res://objects/game/VisualGrid.gd" type="Script" id=2]

[sub_resource type="ParticlesMaterial" id=1]
emission_shape = 1
emission_sphere_radius = 12.0
flag_disable_z = true
spread = 180.0
flatness = 1.0
gravity = Vector3( 0, 10, 0 )
initial_velocity = 7.0
initial_velocity_random = 1.0
angular_velocity = 1.05
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 2.0

[node name="BlockHandler" type="Node2D"]
script = ExtResource( 1 )

[node name="Ray" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 0 )
collide_with_areas = true

[node name="VisualGrid" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="Particle" type="Particles2D" parent="."]
lifetime = 1.2
speed_scale = 5.0
explosiveness = 1.0
randomness = 1.0
local_coords = false
process_material = SubResource( 1 )

[node name="BlockAudio" type="AudioStreamPlayer" parent="."]
volume_db = -5.0

[node name="WaitTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
[connection signal="timeout" from="WaitTimer" to="." method="_on_WaitTimer_timeout"]
